--- a/Phumin_page.html
+++ b/Phumin_page.html
@@ -54,8 +54,12 @@
       </svg>
     </card_profile>
     <br><br>
-    <card_ig>@Phumin.p.p</card_ig>
-    
+    <card_ig>
+    <p><center>@Phumin.p.p</center></p>
+    <center>เลื่อน</center>
+    <center>|</center>
+    <center>V</center>
+    </card_ig>
   <card_flower>
     <center>
       <h5> Flower for you</h5>
