--- a/Ken_page.html
+++ b/Ken_page.html
@@ -54,8 +54,12 @@
       </svg>
     </card_profile>
     <br><br>
-    <card_ig>@Ken_nn.n</card_ig>
-    
+    <card_ig>
+    <p><center>@Ken_nn.n</center></p>
+    <center>เลื่อน</center>
+    <center>|</center>
+    <center>V</center>
+    </card_ig>
   <card_flower>
     <center>
       <h5> Flower for you</h5>
