--- a/Best_page.html
+++ b/Best_page.html
@@ -54,7 +54,12 @@
       </svg>
     </card_profile>
     <br><br>
-    <card_ig>@am_mtsw</card_ig>
+    <card_ig>
+    <p><center>@bwtix</center></p>
+    <center>เลื่อน</center>
+    <center>|</center>
+    <center>V</center>
+    </card_ig>
     
   <card_flower>
     <center>
