--- a/Aof_page.html
+++ b/Aof_page.html
@@ -54,7 +54,12 @@
       </svg>
     </card_profile>
     <br><br>
-    <card_ig>@aof_a_06</card_ig>
+    <card_ig>
+    <p><center>@aof_a_06</center></p>
+    <center>เลื่อน</center>
+    <center>|</center>
+    <center>V</center>
+    </card_ig>
     
   <card_flower>
     <center>
